--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
           <div class="site-nav">
             <nav role="navigation">
               <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link" href="https://twitter.com/templateflip" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a>
+                <li class="nav-item"><a class="nav-link" href="https://twitter.com/mrsilvestrini" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/templateflip" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>
+                <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/mrsilvestriniface" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
+                <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/mrsilvestrini" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="https://github.com/templateflip" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/marcossilvestrini" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
                 </li>
               </ul>
             </nav>
@@ -174,6 +174,7 @@
   </div>
   <hr class="d-print-none"/>
   <div class="page-break"></div>
+
   <div class="education-section px-3 px-lg-4 pb-4">
     <h2 class="h3 mb-4">Education</h2>
     <div class="timeline">
