--- a/index.html
+++ b/index.html
@@ -149,9 +149,13 @@
     <div class="timeline">
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Cloud SRE <span class="text-muted h6"> - TOTVS</span></div>
+          <div class="h5 mb-1">Cloud SRE Platafform <span class="text-muted h6"> - TOTVS</span></div>
           <div class="text-muted text-small mb-2">Sep, 2020 - Feb, 2023</div>
           <div>
+            Atendimento Cloud InfraBase<br>
+            Responsável por automatizar processos relacionados à infraestrutura utilizando a cultura DevOps como pilar.<br>
+            Atuava na implementação do SRE os demais times para sustentação da infraestrutura da Cloud TOTVS.<br>
+            Participava de projetos de migração de Infra para IaC de alguns componentes da Cloud TOTVS.<br>
             Participava de processos relacionados a governança,como Comitês,abertura de RDM's,INC's,PRB's e Post Mortem.<br>
             Colaborava com as ações Sociais da Empresa(Instituto IoS)
           </div>
@@ -162,12 +166,12 @@
           <div class="h5 mb-1">Analista de Infraestrutura II <span class="text-muted h6"> - TOTVS</span></div>
           <div class="text-muted text-small mb-2">May, 2015 - Sep, 2020</div>
           <div>
-            Atendimento Cloud Prime<br>
+            Atendimento Cloud Clientes Prime<br>
             Responsável pela disponibilidade, desempenho,automações,deploy e nivel de satisfação dos clientes de Cloud para contratos Prime.<br>
             Atuava na resolução de problemas relacionados infraestrutura de nivel 2 e 3.<br>
             Responsável por automatizar processos relacionados à infraestrutura utilizando a cultura DevOps como pilar.<br>
             Participava de processos relacionados a governança,como Comitês,abertura de RDM's,INC's,PRB's e Post Mortem.<br>
-            Utilização de diversas tecnologias para entrega do SLA dos Clientes Prime.
+            Utilização de diversas tecnologias para entrega do SLA dos Clientes Prime.<br>
             Colaborava com as ações Sociais da Empresa(Instituto IoS)
             
           </div>
@@ -178,11 +182,11 @@
           <div class="h5 mb-1">Analista de Infraestrutura I<span class="text-muted h6"> - TOTVS</span></div>
           <div class="text-muted text-small mb-2">Aug, 2011 - May, 2015</div>
           <div>
-            Atendimento de Cloud.<br>
+            Atendimento Cloud Clientes Standart.<br>
             Responsável pela disponibilidade, desempenho, deploy e nivel de satisfação dos clientes de Cloud para contratos Standart.<br>
             Atuava na resolução de problemas relacionados infraestrutura de nivel 1.<br>            
-            Utilização de diversas tecnologias para entrega do SLA dos Clientes Standart.
-            Colaborava com as ações Sociais da Empresa(Instituto IoS)
+            Utilização de diversas tecnologias para entrega do SLA dos Clientes Standart.<br>
+            Colaborava com as ações Sociais da Empresa(Instituto IoS).
           </div>
           
         </div>
@@ -238,14 +242,14 @@
         <div class="my-2"><form action="https://formspree.io/marcos.silvestrini@gmail.com"  method="POST">
   <div class="row">
     <div class="col-6">
-      <input class="form-control" type="text" id="name" name="name" placeholder="Your Name" required>
+      <input class="form-control" type="text" id="name" name="name" placeholder="Seu Nome" required>
     </div>
     <div class="col-6">
-      <input class="form-control" type="email" id="email" name="_replyto" placeholder="Your E-mail" required>
+      <input class="form-control" type="email" id="email" name="_replyto" placeholder="Seu E-mail" required>
     </div>
   </div>
   <div class="form-group my-2">
-    <textarea class="form-control" style="resize: none;" id="message" name="message" rows="4"  placeholder="Your Message" required></textarea>
+    <textarea class="form-control" style="resize: none;" id="message" name="message" rows="4"  placeholder="Sua Mensagem " required></textarea>
   </div>
   <button class="btn btn-primary mt-2" type="submit">Send</button>
 </form>
