--- a/index.html
+++ b/index.html
@@ -269,19 +269,19 @@
         <div class="mt-2">
           <div>
             <div class="mb-2">
-              <div class="text-dark"><i class="fab fa-twitter mr-1"></i><span>https://twitter.com/templateflip</span>
+              <div class="text-dark"><i class="fab fa-twitter mr-1"></i><span>https://twitter.com/mrsilvestrini</span>
               </div>
             </div>
             <div class="mb-2">
-              <div class="text-dark"><i class="fab fa-facebook mr-1"></i><span>https://www.facebook.com/templateflip</span>
+              <div class="text-dark"><i class="fab fa-facebook mr-1"></i><span>https://www.facebook.com/mrsilvestriniface</span>
               </div>
             </div>
             <div class="mb-2">
-              <div class="text-dark"><i class="fab fa-instagram mr-1"></i><span>https://www.instagram.com/templateflip</span>
+              <div class="text-dark"><i class="fab fa-instagram mr-1"></i><span>https://www.instagram.com/mrsilvestrini</span>
               </div>
             </div>
             <div class="mb-2">
-              <div class="text-dark"><i class="fab fa-github mr-1"></i><span>https://github.com/templateflip</span>
+              <div class="text-dark"><i class="fab fa-github mr-1"></i><span>https://github.com/marcossilvestrini</span>
               </div>
             </div>
           </div>
