--- a/index.html
+++ b/index.html
@@ -609,8 +609,8 @@
                       autounnatend<br />
                       Conhecimento de configuração de imagens linux e Windows<br />
                       Conhecimento de configuração dos provisioners disponiveis
-                      como shell, powershell e ansible Conhecimento em
-                      vsphere-iso e vsphere-clone
+                      como shell, powershell e ansible<br />
+                      Conhecimento em vsphere-iso e vsphere-clone
                     </div>
                   </div>
                 </div>
@@ -722,7 +722,7 @@
                     </div>
                     <div class="text-muted text-small mb-2">
                       Noções de orquestração de Conteiners com K8S<br />
-                      Noções de deploy de operators com K8S e k3S
+                      Noções de deploy de operators com k3S
                     </div>
                   </div>
                 </div>
@@ -842,7 +842,7 @@
                       <span class="text-muted h6">Conceitos Nuvem OCI</span>
                     </div>
                     <div class="text-muted text-small mb-2">
-                      Noções de OCI AD e FD<br>
+                      Noções de OCI AD e FD<br />
                       Noções de OCI IAM,VCN
                     </div>
                   </div>
@@ -905,7 +905,7 @@
                       <span class="text-muted h6">Conceitos Nuvem Azure</span>
                     </div>
                     <div class="text-muted text-small mb-2">
-                      Noções de provisionamento de recursos na nuvem Azure<br>
+                      Noções de provisionamento de recursos na nuvem Azure<br />
                       Noçoes de Azure Devops
                     </div>
                   </div>
