--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
@@ -130,7 +131,7 @@
                 <h2 class="h3 mb-3">Sobre Eu</h2>
                 <p>
                   Olá! Eu sou Marcos Silvestrini.Apaixonado por tecnologia.<br />
-                  Atuo nas áreas de Cloud e Infraestrutura com ênfase em Cultura
+                  Atuo nas áreas de Cloud e Infraestrutura com ênfase na Cultura
                   DevOps.<br />
                   No ambiente corporativo tenho como foco principal o
                   Cliente.<br />
