Fix docker skill

--- a/index.html
+++ b/index.html
@@ -708,9 +708,9 @@
                       <span class="text-muted h6">Docker Engine</span>
                     </div>
                     <div class="text-muted text-small mb-2">
-                      Conhecimento de instalação e configuração do ansible<br />
-                      Conhecimento de configuração de playbooks,roles e tasks<br />
-                      Conhecimento de Instalação e configuração do AWX operator
+                      Conhecimento de instalação e configuração da docker engine<br />
+                      Conhecimento em configuração do dockerfile e dockercompose<br>
+                      Conhecimento em docker swarm<br />                      
                     </div>
                   </div>
                 </div>
