--- a/index.html
+++ b/index.html
@@ -906,12 +906,30 @@
                       <span class="text-muted h6">Conceitos Nuvem Azure</span>
                     </div>
                     <div class="text-muted text-small mb-2">
-                      Noções de provisionamento de recursos na nuvem Azure<br />
-                      Noçoes de Azure Devops
+                      Noçoes de Azure Global Infrastructure(Geographic,Region,Availability Zone)<br />
+                      Noçoes de Azure Marketplace<br>
+                      Noçôes de Azure Pricing(Pricing caculator,TCO Caculator)<br>
+                      Noções de Pricing by product(Pay as you go,reserved,Spot,Azure Hybrid Benefic)<br>
+                      Noções de Azure VM Size
+                      Noções de Azure Compute Services
                     </div>
                   </div>
                 </div>
-              </div>
+              </div>   
+              <div class="timeline">
+                <div class="timeline-card timeline-card-none card shadow-sm">
+                  <div class="card-body">
+                    <div class="h5 mb-1">
+                      <span class="text-muted h6">Azure CLI</span>
+                    </div>
+                    <div class="text-muted text-small mb-2">
+                      Conhecimento em automações com az cli e azure powershell em ambientes windows e Linux<br>
+                      Conhecimento em manipulação de recursos no portal azure (resource-groups,compute,account,etc)<br>
+                      Conhecimento na construção de output de recursos disponiveis no portal azure<br>
+                    </div>
+                  </div>
+                </div>
+              </div>              
             </div>
             <!--Fim Div Azure-->
 
