--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
                       Noçoes de Azure Marketplace<br>
                       Noçôes de Azure Pricing(Pricing caculator,TCO Caculator)<br>
                       Noções de Pricing by product(Pay as you go,reserved,Spot,Azure Hybrid Benefic)<br>
-                      Noções de Azure VM Size
+                      Noções de Azure VM Size<br>
                       Noções de Azure Compute Services
                     </div>
                   </div>
