--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
                     Atendimento Cloud InfraBase<br />
                     Responsável por automatizar processos relacionados à
                     infraestrutura utilizando a cultura DevOps como pilar.<br />
-                    Atuava na implementação do SRE os demais times para
+                    Atuava na implementação do SRE com os demais times para
                     sustentação da infraestrutura da Cloud TOTVS.<br />
                     Participava de projetos de migração de Infra para IaC de
                     alguns componentes da Cloud TOTVS.<br />
