--- a/index.html
+++ b/index.html
@@ -545,6 +545,39 @@
               </div>
             </div>
             <!--Fim Div Git-->
+            
+            <!--Inicio Div Jenkins-->
+            <div class="mb-2">
+              <span>Jenkins</span>
+              <div class="progress my-1">
+                <div
+                  class="progress-bar bg-warning"
+                  role="progressbar"
+                  data-aos="zoom-in-right"
+                  data-aos-delay="400"
+                  data-aos-anchor=".skills-section"
+                  style="width: 70%"
+                  aria-valuenow="70"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+              <div class="timeline">
+                <div class="timeline-card timeline-card-none card shadow-sm">
+                  <div class="card-body">
+                    <div class="h5 mb-1">
+                      <span class="text-muted h6">Conceitos Jenkins</span>
+                    </div>
+                    <div class="text-muted text-small mb-2">
+                      Conhecimento de instalação e configuração do Jenkins<br />
+                      Conhecimento de configuração de pipelines para automações de Deploy<br />
+                      Conhecimento de configuração de integrações com ferramentas como github,gitlab,etc
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--Fim Div Jenkins-->
 
             <!--Inicio Div Vagrant-->
             <div class="mb-2">
@@ -911,7 +944,12 @@
                       Noçôes de Azure Pricing(Pricing caculator,TCO Caculator)<br>
                       Noções de Pricing by product(Pay as you go,reserved,Spot,Azure Hybrid Benefic)<br>
                       Noções de Azure VM Size<br>
-                      Noções de Azure Compute Services
+                      Conhecimento de Azure Virtual Machine<br>
+                      Conhecimento de Azure App Service<br>
+                      Conhecimento de Azure Conteiner Intance<br>
+                      Conhecimento de Azure Kubernet Services<br>
+                      Conhecimento de Azure Windows Virtual Desktop<br>
+                      Noções de Azure Functions<br>
                     </div>
                   </div>
                 </div>
