--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
@@ -320,11 +319,10 @@
                       <span class="text-muted h6">Conceitos Windows</span>
                     </div>
                     <div class="text-muted text-small mb-2">
-                      Instalação e configuração de Windows Server,Windows
-                      Desktop<br />
+                      Instalação e configuração de Windows Server,Windows Desktop<br />
                       Gerenciamento de usuários e grupos locais<br />
-                      Configuração de redes,gateway,dns,compartilhamento de
-                      arquivos e impressoras. Configuração de Firewall
+                      Configuração de redes,gateway,dns,compartilhamento de arquivos e impressoras<br>
+                      Configuração de Firewall
                     </div>
                   </div>
                 </div>
@@ -345,7 +343,8 @@
                       Conhecimento em criação de dominios, OU,grupos e usuários
                       no AD<br />
                       Conhecimento em configuração de zonas e zonas reversas no
-                      DNS Conhecimento em criação de pool DHCP Conhecimento em
+                      DNS<br />
+                      Conhecimento em criação de pool DHCP Conhecimento em
                       gerenciamento de usuários e grupos do AD
                     </div>
                   </div>
@@ -378,11 +377,9 @@
                     </div>
                     <div class="text-muted text-small mb-2">
                       Conhecimento em scripts, funções e modulos<br />
-                      Conhecimento em automações de serviços como AD,DNS,DHCP e
-                      IIS<br />
-                      Conhecimento em API's com Powershell Conhecimento de
-                      Modulos como Powercli,PowerNSX Conhecimento em Powershel
-                      Universal
+                      Conhecimento em automações de serviços como AD,DNS,DHCP e IIS<br />
+                      Conhecimento em API's com Powershell<br>
+                      Conhecimento de Modulos como Powercli,PowerNSX Conhecimento em Powershel Universal
                     </div>
                   </div>
                 </div>
@@ -545,7 +542,7 @@
               </div>
             </div>
             <!--Fim Div Git-->
-            
+
             <!--Inicio Div Jenkins-->
             <div class="mb-2">
               <span>Jenkins</span>
@@ -570,8 +567,10 @@
                     </div>
                     <div class="text-muted text-small mb-2">
                       Conhecimento de instalação e configuração do Jenkins<br />
-                      Conhecimento de configuração de pipelines para automações de Deploy<br />
-                      Conhecimento de configuração de integrações com ferramentas como github,gitlab,etc
+                      Conhecimento de configuração de pipelines para automações
+                      de Deploy<br />
+                      Conhecimento de configuração de integrações com
+                      ferramentas como github,gitlab,etc
                     </div>
                   </div>
                 </div>
@@ -741,9 +740,11 @@
                       <span class="text-muted h6">Docker Engine</span>
                     </div>
                     <div class="text-muted text-small mb-2">
-                      Conhecimento de instalação e configuração da docker engine<br />
-                      Conhecimento em configuração do dockerfile e dockercompose<br>
-                      Conhecimento em docker swarm<br />                      
+                      Conhecimento de instalação e configuração da docker
+                      engine<br />
+                      Conhecimento em configuração do dockerfile e
+                      dockercompose<br />
+                      Conhecimento em docker swarm<br />
                     </div>
                   </div>
                 </div>
@@ -939,21 +940,24 @@
                       <span class="text-muted h6">Conceitos Nuvem Azure</span>
                     </div>
                     <div class="text-muted text-small mb-2">
-                      Noçoes de Azure Global Infrastructure(Geographic,Region,Availability Zone)<br />
-                      Noçoes de Azure Marketplace<br>
-                      Noçôes de Azure Pricing(Pricing caculator,TCO Caculator)<br>
-                      Noções de Pricing by product(Pay as you go,reserved,Spot,Azure Hybrid Benefic)<br>
-                      Noções de Azure VM Size<br>
-                      Conhecimento de Azure Virtual Machine<br>
-                      Conhecimento de Azure App Service<br>
-                      Conhecimento de Azure Conteiner Intance<br>
-                      Conhecimento de Azure Kubernet Services<br>
-                      Conhecimento de Azure Windows Virtual Desktop<br>
-                      Noções de Azure Functions<br>
+                      Noçoes de Azure Global
+                      Infrastructure(Geographic,Region,Availability Zone)<br />
+                      Noçoes de Azure Marketplace<br />
+                      Noçôes de Azure Pricing(Pricing caculator,TCO
+                      Caculator)<br />
+                      Noções de Pricing by product(Pay as you
+                      go,reserved,Spot,Azure Hybrid Benefic)<br />
+                      Noções de Azure VM Size<br />
+                      Conhecimento de Azure Virtual Machine<br />
+                      Conhecimento de Azure App Service<br />
+                      Conhecimento de Azure Conteiner Instance<br />
+                      Conhecimento de Azure Kubernet Services<br />
+                      Conhecimento de Azure Windows Virtual Desktop<br />
+                      Noções de Azure Functions<br />
                     </div>
                   </div>
                 </div>
-              </div>   
+              </div>
               <div class="timeline">
                 <div class="timeline-card timeline-card-none card shadow-sm">
                   <div class="card-body">
@@ -961,13 +965,16 @@
                       <span class="text-muted h6">Azure CLI</span>
                     </div>
                     <div class="text-muted text-small mb-2">
-                      Conhecimento em automações com az cli e azure powershell em ambientes windows e Linux<br>
-                      Conhecimento em manipulação de recursos no portal azure (resource-groups,compute,account,etc)<br>
-                      Conhecimento na construção de output de recursos disponiveis no portal azure<br>
+                      Conhecimento em automações com az cli e azure powershell
+                      em ambientes windows e Linux<br />
+                      Conhecimento em manipulação de recursos no portal azure
+                      (resource-groups,compute,account,etc)<br />
+                      Conhecimento na construção de output de recursos
+                      disponiveis no portal azure<br />
                     </div>
                   </div>
                 </div>
-              </div>              
+              </div>
             </div>
             <!--Fim Div Azure-->
 
