--- a/index.html
+++ b/index.html
@@ -320,11 +320,12 @@
                       <span class="text-muted h6">Conceitos Windows</span>
                     </div>
                     <div class="text-muted text-small mb-2">
-                      Instalação e configuração de Windows Server,Windows Desktop<br />
+                      Instalação e configuração de Windows Server,Windows
+                      Desktop<br />
                       Gerenciamento de usuários e grupos locais<br />
-                      Configuração de redes,gateway,dns,compartilhamento de arquivos e impressoras<br>
+                      Configuração de redes,gateway,dns,compartilhamento de
+                      arquivos e impressoras<br />
                       Configuração de Firewall
-                      
                     </div>
                   </div>
                 </div>
@@ -379,9 +380,11 @@
                     </div>
                     <div class="text-muted text-small mb-2">
                       Conhecimento em scripts, funções e modulos<br />
-                      Conhecimento em automações de serviços como AD,DNS,DHCP e IIS<br />
-                      Conhecimento em API's com Powershell<br>
-                      Conhecimento de Modulos como Powercli,PowerNSX Conhecimento em Powershel Universal
+                      Conhecimento em automações de serviços como AD,DNS,DHCP e
+                      IIS<br />
+                      Conhecimento em API's com Powershell<br />
+                      Conhecimento de Modulos como Powercli,PowerNSX
+                      Conhecimento em Powershel Universal
                     </div>
                   </div>
                 </div>
@@ -936,7 +939,7 @@
                 ></div>
               </div>
               <div class="timeline">
-                <div class="timeline-card timeline-card-none card shadow-sm">
+                <div class="timeline-card timeline-card-primary card shadow-sm">
                   <div class="card-body">
                     <div class="h5 mb-1">
                       <span class="text-muted h6">Conceitos Nuvem Azure</span>
@@ -950,6 +953,18 @@
                       Noções de Pricing by product(Pay as you
                       go,reserved,Spot,Azure Hybrid Benefic)<br />
                       Noções de Azure VM Size<br />
+                      Noções de Azure subscriptions e resource groups
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="timeline">
+                <div class="timeline-card timeline-card-primary card shadow-sm">
+                  <div class="card-body">
+                    <div class="h5 mb-1">
+                      <span class="text-muted h6">Azure Compute</span>
+                    </div>
+                    <div class="text-muted text-small mb-2">
                       Conhecimento de Azure Virtual Machine<br />
                       Conhecimento de Azure App Service<br />
                       Conhecimento de Azure Conteiner Instance<br />
@@ -961,7 +976,70 @@
                 </div>
               </div>
               <div class="timeline">
-                <div class="timeline-card timeline-card-none card shadow-sm">
+                <div class="timeline-card timeline-card-primary card shadow-sm">
+                  <div class="card-body">
+                    <div class="h5 mb-1">
+                      <span class="text-muted h6">Azure Network</span>
+                    </div>
+                    <div class="text-muted text-small mb-2">
+                      Noções de vnets<br />
+                      Noções de Load Balance<br />
+                      Noções de VPN Gateway <br />
+                      Noções de Aplication Gateway <br />
+                      Noções de Express Route <br />
+                      Noções de CDN
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="timeline">
+                <div class="timeline-card timeline-card-primary card shadow-sm">
+                  <div class="card-body">
+                    <div class="h5 mb-1">
+                      <span class="text-muted h6">Azure Storage</span>
+                    </div>
+                    <div class="text-muted text-small mb-2">
+                      Noções de Azure Storage Redundancy (LRS,ZRS,GRS,GZRS)<br />
+                      Noções de tipos de storage(blob,disk,file,archive) <br />
+                      Noções de Access Tier(hot,cool,archive)
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="timeline">
+                <div class="timeline-card timeline-card-primary card shadow-sm">
+                  <div class="card-body">
+                    <div class="h5 mb-1">
+                      <span class="text-muted h6">Azure Database</span>
+                    </div>
+                    <div class="text-muted text-small mb-2">
+                      Noções de Azure Cosmos DB <br />
+                      Noções de Azure SQL(single,managed, on virtual machine)
+                      <br />
+                      Noções de Azure Cosmos DB <br />
+                      Noções de Azure Data Migration Assistant
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="timeline">
+                <div class="timeline-card timeline-card-primary card shadow-sm">
+                  <div class="card-body">
+                    <div class="h5 mb-1">
+                      <span class="text-muted h6">Azure Devops</span>
+                    </div>
+                    <div class="text-muted text-small mb-2">
+                      Noções de Azure Boards <br />
+                      Noções de Azure Test Plain <br />
+                      Noções de Azure Pipelines <br />
+                      Noções de Azure Repos <br />
+                      Noções de Azure Artifacts
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="timeline">
+                <div class="timeline-card timeline-card-primary card shadow-sm">
                   <div class="card-body">
                     <div class="h5 mb-1">
                       <span class="text-muted h6">Azure CLI</span>
@@ -970,7 +1048,7 @@
                       Conhecimento em automações com az cli e azure powershell
                       em ambientes windows e Linux<br />
                       Conhecimento em manipulação de recursos no portal azure
-                      (resource-groups,compute,account,etc)<br />
+                      (resource-groups,account,roles,compute,network,storage,database)<br />
                       Conhecimento na construção de output de recursos
                       disponiveis no portal azure<br />
                     </div>
@@ -1166,6 +1244,8 @@
               </div>
             </div>
           </div>
+          <!--Fim Div - Formação-->
+          <!--Inicio Div - Certificações-->
           <div class="education-section px-3 px-lg-4 pb-4">
             <h2 class="h3 mb-4">Certificações</h2>
             <div class="timeline">
@@ -1175,7 +1255,7 @@
                     LPIC1 - Linux Administrator
                     <span class="text-muted h6"> - lpi.org</span>
                   </div>
-                  <div class="text-muted text-small mb-2">2021 - 2021</div>
+                  <div class="text-muted text-small mb-2">2022</div>
                   <div>
                     O LPIC-1 é a primeira certificação no programa de
                     certificação profissional em vários níveis do Linux do Linux
@@ -1200,9 +1280,28 @@
                   </div>
                 </div>
               </div>
+              <div class="timeline-card timeline-card-primary card shadow-sm">
+                <div class="card-body">
+                  <div class="h5 mb-1">
+                    Azure AZ-900 Microsoft Azure Fundamentals
+                    <span class="text-muted h6"> - microsoft.com</span>
+                  </div>
+                  <div class="text-muted text-small mb-2">2023</div>
+                  <div>
+                    O exame de Fundamentos do Azure é uma oportunidade de
+                    comprovar o conhecimento dos conceitos de nuvem, serviços do
+                    Azure, cargas de trabalho do Azure, segurança e privacidade
+                    no Azure, bem como preços e suporte do Azure. Os candidatos
+                    devem estar familiarizados com os conceitos gerais de
+                    tecnologia, incluindo conceitos de rede, armazenamento,
+                    computação, suporte a aplicativos e desenvolvimento de
+                    aplicativos..
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <!--Fim Div - Formação-->
+          <!--Fim Div - Certificações-->
           <hr class="d-print-none" />
           <!--Inicio Div - Contato-->
           <div class="contant-section px-3 px-lg-4 pb-4" id="contact">
