Update azure skills

--- a/index.html
+++ b/index.html
@@ -953,7 +953,11 @@
                       Noções de Pricing by product(Pay as you
                       go,reserved,Spot,Azure Hybrid Benefic)<br />
                       Noções de Azure VM Size<br />
-                      Noções de Azure subscriptions e resource groups
+                      Noções de Azure subscriptions e resource groups<br>
+                      Noções de Azure Monitor <br>
+                      Noções de Azure Advisor <br />
+                      Noções de Azure Service Health
+                      
                     </div>
                   </div>
                 </div>
@@ -1038,6 +1042,21 @@
                   </div>
                 </div>
               </div>
+
+              <div class="timeline">
+                <div class="timeline-card timeline-card-primary card shadow-sm">
+                  <div class="card-body">
+                    <div class="h5 mb-1">
+                      <span class="text-muted h6">Azure Security</span>
+                    </div>
+                    <div class="text-muted text-small mb-2">
+                      Noções de Azure Security Center <br />
+                      Noções de Azure Policy                      
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <div class="timeline">
                 <div class="timeline-card timeline-card-primary card shadow-sm">
                   <div class="card-body">
