--- a/index.html
+++ b/index.html
@@ -914,7 +914,8 @@
                       <span class="text-muted h6">Conceitos Nuvem AWS</span>
                     </div>
                     <div class="text-muted text-small mb-2">
-                      Noções de provisionamento de recursos na nuvem AWS
+                      Conhecimento dos conceitos de nuvem utilizados na AWS<br>
+                      Noções de provisionamento de recursos na nuvem AWS(EC2,VPC,EBS)
                     </div>
                   </div>
                 </div>
@@ -932,7 +933,7 @@
                   data-aos="zoom-in-right"
                   data-aos-delay="600"
                   data-aos-anchor=".skills-section"
-                  style="width: 10%"
+                  style="width: 30%"
                   aria-valuenow="10"
                   aria-valuemin="0"
                   aria-valuemax="100"
