Add kubernetes skils

--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
                   data-aos="zoom-in-right"
                   data-aos-delay="600"
                   data-aos-anchor=".skills-section"
-                  style="width: 40%"
+                  style="width: 60%"
                   aria-valuenow="40"
                   aria-valuemin="0"
                   aria-valuemax="100"
@@ -744,12 +744,11 @@
                     <div class="h5 mb-1">
                       <span class="text-muted h6">Docker Engine</span>
                     </div>
-                    <div class="text-muted text-small mb-2">
-                      Conhecimento de instalação e configuração da docker
-                      engine<br />
-                      Conhecimento em configuração do dockerfile e
-                      dockercompose<br />
-                      Conhecimento em docker swarm<br />
+                    <br class="text-muted text-small mb-2">
+                      Conhecimento de instalação e configuração da docker engine<br>
+                      Conhecimento em dockerfile e build de imagem<br>
+                      Conhecimento em deploy de services com dockercompose<br>
+                      Conhecimento em docker swarm<br>
                     </div>
                   </div>
                 </div>
@@ -758,11 +757,20 @@
                 <div class="timeline-card timeline-card-primary card shadow-sm">
                   <div class="card-body">
                     <div class="h5 mb-1">
-                      <span class="text-muted h6">Kubernets</span>
+                      <span class="text-muted h6">Kubernetes</span>
                     </div>
                     <div class="text-muted text-small mb-2">
-                      Noções de orquestração de Conteiners com K8S<br />
-                      Noções de deploy de operators com k3S
+                      Conhecimento de Instalação e configuração de um Cluster Kubernetes(Kind,Kubeadm,RKE2)<br />
+                      Conhecimento de arquitetura de cluster Kubernetes(control plane, workers)<br>
+                      Conhecimento de Pods<br>
+                      Conhecimento de Deployments e Replicasets<br>
+                      Conhecimento de Daemonsets<br>
+                      Conhecimento de Probes (Startup,Readiness,Liveness)<br>
+                      Conhecimento de Volumes(Storage Class, PV,PVC)<br>
+                      Conhecimento de Statefulset<br>
+                      Conhecimento de Services(ClusterIp,NodePort,LoadBalancer,ExternalName,Endpoints)<br>
+                      Conhecimento em Rancher<br>
+                      Conhecimento em Helm Charts<br>
                     </div>
                   </div>
                 </div>
@@ -973,7 +981,7 @@
                       Conhecimento de Azure Virtual Machine<br />
                       Conhecimento de Azure App Service<br />
                       Conhecimento de Azure Conteiner Instance<br />
-                      Conhecimento de Azure Kubernet Services<br />
+                      Conhecimento de Azure Kubernetes Services<br />
                       Conhecimento de Azure Windows Virtual Desktop<br />
                       Noções de Azure Functions<br />
                     </div>
