Update kubernetes skils

--- a/index.html
+++ b/index.html
@@ -721,30 +721,35 @@
               </div>
             </div>
             <!--Fim Div Ansible-->
+            <!--Fim Habilidades Devops-->
+            
+            <!--Inicio Habilidades Containers-->
+            <h2 class="h3 mb-3">Containers</h2>
 
-            <!--Inicio Div Conteiners-->
+            <!--Inicio Div Docker-->
             <div class="mb-2">
-              <span>Conteiners</span>
+              <span>Docker</span>
               <div class="progress my-1">
                 <div
-                  class="progress-bar bg-gradient"
+                  class="progress-bar bg-primary"
                   role="progressbar"
                   data-aos="zoom-in-right"
                   data-aos-delay="600"
                   data-aos-anchor=".skills-section"
                   style="width: 60%"
-                  aria-valuenow="40"
+                  aria-valuenow="60"
                   aria-valuemin="0"
                   aria-valuemax="100"
                 ></div>
               </div>
               <div class="timeline">
-                <div class="timeline-card timeline-card-primary card shadow-sm">
+                <div class="timeline-card timeline-card-success card shadow-sm">
                   <div class="card-body">
                     <div class="h5 mb-1">
-                      <span class="text-muted h6">Docker Engine</span>
+                      <span class="text-muted h6">Conceitos de Docker</span>
                     </div>
-                    <br class="text-muted text-small mb-2">
+                    <div class="text-muted text-small mb-2">
+                      Noções de Namespaces e Cgroups
                       Conhecimento de instalação e configuração da docker engine<br>
                       Conhecimento em dockerfile e build de imagem<br>
                       Conhecimento em deploy de services com dockercompose<br>
@@ -752,15 +757,34 @@
                     </div>
                   </div>
                 </div>
+              </div>              
+            </div>
+            <!--Fim Div Docker-->
+
+            <!--Inicio Div Kubernetes-->
+            <div class="mb-2">
+              <span>Kubernetes</span>
+              <div class="progress my-1">
+                <div
+                  class="progress-bar bg-danger"
+                  role="progressbar"
+                  data-aos="zoom-in-right"
+                  data-aos-delay="600"
+                  data-aos-anchor=".skills-section"
+                  style="width: 40%"
+                  aria-valuenow="40"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
               </div>
               <div class="timeline">
-                <div class="timeline-card timeline-card-primary card shadow-sm">
+                <div class="timeline-card timeline-card-none card shadow-sm">
                   <div class="card-body">
                     <div class="h5 mb-1">
-                      <span class="text-muted h6">Kubernetes</span>
+                      <span class="text-muted h6">Conceitos de Kubernetes</span>
                     </div>
                     <div class="text-muted text-small mb-2">
-                      Conhecimento de Instalação e configuração de um Cluster Kubernetes(Kind,Kubeadm,RKE2)<br />
+                      Conhecimento de Instalação e configuração de um Cluster Kubernetes(Kind,Kubeadm,RKE2)<br>
                       Conhecimento de arquitetura de cluster Kubernetes(control plane, workers)<br>
                       Conhecimento de Pods<br>
                       Conhecimento de Deployments e Replicasets<br>
@@ -776,9 +800,9 @@
                 </div>
               </div>
             </div>
-            <!--Fim Div Conteiners-->
-            <!--Fim Habilidades Devops-->
-
+            <!--Fim Div Kubernetes-->
+            <!--Fim Div Containers-->
+            
             <!--Inicio Habilidades Monitoramento-->
             <h2 class="h3 mb-3">Monitoramento</h2>
 
@@ -861,7 +885,7 @@
                 </div>
               </div>
             </div>
-            <!--Fim Div Nagios-->
+            <!--Fim Div Zabbix-->
             <!--Fim Habilidades Monitoramento-->
 
             <!--Inicio Habilidades Nuvens-->
