--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
 
             <!--Inicio Div Git-->
             <div class="mb-2">
-              <span>Git</span>
+              <span>Backstage</span>
               <div class="progress my-1">
                 <div
                   class="progress-bar bg-danger"
